# blender-studio-pipeline

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  README.md  pyproject.toml
.gitea/: cloudrig_bug.yaml
.gitea/issue_template/: bug.yaml  character_rig_bug.yaml  cloudrig_bug.yaml
.gitea/workflows/: build.yml
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/addons/: anim_cupboard.md  asset_pipeline.md  blender_kitsu.md  blender_log.md  blender_svn.md  bone_gizmos.md  brushstroke_tools.md  cache_manager.md  contactsheet.md  easy_weight.md  easy_weights.md  geonode_shapekeys.md  grease_converter.md  lattice_magic.md  lighting_overrider.md  overview.md  pose_shape_keys.md
docs/artist-guide/: kitsu.md
docs/naming-conventions/: datablock-names.md  examples.md  file-types.md  in-file-prefixes.md  introduction.md  shared-folder-structure.md  svn-folder-structure.md
docs/overview/: design-principles.md  introduction.md
docs/pipeline-overview/: publishing.md
docs/td-guide/: addon_preferences.md  addon_setup.md  blender_setup.md  deployment_assistant.md  extensions_setup.md  flamenco_setup.md  folder_structure_overview.md  folder_structure_setup.md  infrastructure.md  introduction.md  kitsu_server.md  populating_shared.md  populating_svn.md  project-tools-setup.md  project_folder_structure.md  python.md  quick-start.md  repository.md  setup_assistant.md  svn-setup.md  syncthing-setup.md
docs/user-guide/: kitsu.md
scripts-blender/: README.md
scripts-blender/addons/: requirements-dev.txt  requirements.txt
(+609 files in other folders)
