[project]
name = "blender-studio-tools"
version = "0.0.2"
description = """
    The complete collection of documents, add-ons, scripts and tools that
    make up the Blender Studio pipeline.
"""
authors = [
    "Francesco Siddi <fsiddi@blender.org>",
    "Nick Alberelli <nick@blender.org>",
    "Sebastian Parborg <sebastian@blender.org>",
    "Demeter Dzadik <demeter@blender.org>",
    "Simon Thommes <simon@blender.org>"
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.yapf]
BASED_ON_STYLE = "pep8"
SPACES_BEFORE_COMMENT = 4
SPLIT_BEFORE_LOGICAL_OPERATOR = true
COALESCE_BRACKETS = true
COLUMN_LIMIT = 120
CONTINUATION_ALIGN_STYLE = "VALIGN-RIGHT"
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGN = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = true
